Ajout de paragraphes dans index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 
     <body>
       <h1>Mon super site</h1>
+      
+      <p>Bonjour et <span class="salut">bienvenue</span> sur mon site !</p>
+      <p>Pour le moment, mon site est un peu <em>vide</em>. Patientez encore un          peu !</p>
     </body>
 </html>
